# charm

./: .gitignore  Cargo.toml  OPTIMIZATION_ROADMAP.md  README.md
.github/workflows/: ci.yml
docs/: architecture.md  charm-strategy.md  development.md  devin-windsurf-harness-research.md  providers.md
docs/superpowers/plans/: 2026-04-30-repl-first-provider-auth.md
docs/superpowers/specs/: 2026-04-30-repl-first-provider-auth-design.md
src/: cli.rs  lib.rs  main.rs
src/agent/: context_compressor.rs  loop_agent.rs  mod.rs  parser.rs  prompt.rs  prompt_compiler.rs  provider_prompts.rs  reference_broker.rs  rules.rs  runner.rs  task_concretizer.rs  token_saver.rs
src/core/: mod.rs
src/harness/: checkpoint.rs  memory.rs  mod.rs  plan.rs  session.rs  trace.rs
src/indexer/: live_index.rs  mod.rs  parser.rs  store.rs  types.rs
src/orchestrator/: broker.rs  mod.rs  roles.rs  types.rs
src/prism/: graph.rs
src/providers/: anthropic.rs  auth_store.rs  client.rs  factory.rs  google.rs  mod.rs  ollama.rs  openai.rs  openai_codex.rs  openai_compatible.rs  openrouter.rs  sse.rs  types.rs
src/retrieval/: types.rs  worker.rs
src/runtime/: mcp.rs  mod.rs  router.rs  session_runtime.rs  subagent.rs  types.rs  workspace.rs
src/tools/: browser.rs  cache.rs  command.rs  fast_executor.rs  file.rs  github_cli.rs  memory_tools.rs  mod.rs  notebook.rs  patch.rs  retrieval.rs  rtk_filter.rs  search.rs  semantic.rs  test_runner.rs  todo.rs  trajectory.rs  url_guard.rs  web.rs  web_search.rs
src/tui/: app.rs  dialog.rs  event.rs  mod.rs  theme.rs
