[package]
name = "charm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
walkdir = "2.5"
ignore = "0.4"
regex = "1.11"
git2 = "0.20"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
uuid = { version = "1.16", features = ["v4"] }
lazy_static = "1.5"
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.23"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
schemars = "0.8"
dotenvy = "0.15"
colored = "3.0"
indicatif = "0.17"
async-trait = "0.1"
crossterm = "0.28"
ratatui = "0.29"
unicode-width = "0.2"
futures-util = "0.3"
fantoccini = "0.21"
urlencoding = "2.1"
html-escape = "0.2"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
opt-level = 3
lto = true
